--- a/root/about.html
+++ b/root/about.html
@@ -1,5 +1,7 @@
 ---
-layout: home
+layout: page
+title: About
+permalink: /about
 ---
 
 <!DOCTYPE html>
@@ -9,6 +11,6 @@ layout: home
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Теоретически это страница About</h1>
   </body>
 </html>
