--- a/root/about.html
+++ b/root/about.html
@@ -1,7 +1,6 @@
 ---
-layout: page
-title: About
-permalink: https://marykka.github.io/about
+permalink: /about.html
+layout: default
 ---
 
 <!DOCTYPE html>
