--- a/root/index.html
+++ b/root/index.html
@@ -10,6 +10,10 @@ layout: default
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Hi, I am Mariia Tikhomirova,</br>Berlin-based UX writer</h1>
+  <p>I see UX writing as an important part of communication between business and users. Using my expertise in psychology and vast experience of working with
+    different forms of a written word, I create clear copy for user-friendly interfaces.</p>
+  <p>Russian native speaker, speak and write English fluently, explore German language (at the moment with telc C1 certificate). Figma fan, adopt docs-as-code, I am
+    most effective on projects with Run approach.</p>
   </body>
 </html>
