--- a/root/index.html
+++ b/root/index.html
@@ -1,16 +1,6 @@
 ---
-permalink: marykka.github.io
 layout: default
 title: Home
 ---
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  </head>
-  <body>
-    <h1>Hi, I am Mariia Tikhomirova,</br>Berlin-based UX writer</h1>
-    </body>
-</html>
+<h1>{{ "Hi, I am Mariia Tikhomirova" | downcase }}</h1>
