--- a/404.html
+++ b/404.html
@@ -18,8 +18,10 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  < <h1>Nah, it is not here</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>¯\_(ツ)_/¯</strong></p>
+  <p>Plan A. Make sure your search query is correct.</p>
+  <p>Plan B. Search for something completely different.</p>
+  <p>plan C. Ask me directly via <a href="https://www.linkedin.com/in/mariiatikhomirova/">LinkedIn</a>, where is it, what you are looking for here.</p>
 </div>
